[package]
name = "sargs"
version = "0.1.0"
edition = "2021"
description = "The streaming version xargs"
license = "MIT"
categories = ["command-line-utilities", "command-line-interface"]
keywords = ["xargs", "streaming", "cli"]
authors = ["Yuta Hinokuma <yuta.hinokuma725@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/higumachan/sargs-rs/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12.1"

[lints.clippy]
dbg_macro = "deny"